gatekeeper_repo_policy/allowed_repos.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: repo-is-gcr
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "enforcing"
  parameters:
    repos:
      - "gcr.io/google-containers/"
      - "us-central1-docker.pkg.dev/gcastle-gke-dev/gcastle-test/"
